force-app/main/default/objects/Rebate_Rule_Line_Item__c/Rebate_Rule_Line_Item__c.object-meta.xml
<CustomObject>
    <description>Viper Project</description>
    <label>Rebate Rule Line Item</label>
    <nameField>
        <displayFormat>RLI-{000}</displayFormat>
        <label>Rebate Rule Line Item ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Rebate Rule Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>