force-app/main/default/objects/Rebate_Rule_Line_Item__c/fields/Business_Segment__c.field-meta.xml
<CustomField>
    <fullName>Business_Segment__c</fullName>
    <label>Business Segment</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>All Segments</fullName>
            </value>
            <value>
                <fullName>ABU</fullName>
            </value>
            <value>
                <fullName>ABU S&amp;P</fullName>
            </value>
            <value>
                <fullName>Dell Events</fullName>
            </value>
            <value>
                <fullName>Global Mktg</fullName>
            </value>
            <value>
                <fullName>ASAP</fullName>
            </value>
            <value>
                <fullName>ASG</fullName>
            </value>
            <value>
                <fullName>SMB</fullName>
            </value>
            <value>
                <fullName>LE</fullName>
            </value>
            <value>
                <fullName>Consumer S&amp;P</fullName>
            </value>
            <value>
                <fullName>CSMR</fullName>
            </value>
            <value>
                <fullName>Int&apos;l</fullName>
            </value>
            <value>
                <fullName>LE S&amp;P</fullName>
            </value>
            <value>
                <fullName>PUB</fullName>
            </value>
            <value>
                <fullName>PUB S&amp;P</fullName>
            </value>
            <value>
                <fullName>REL</fullName>
            </value>
            <value>
                <fullName>S&amp;P COC</fullName>
            </value>
            <value>
                <fullName>Services</fullName>
            </value>
            <value>
                <fullName>Corporate Events</fullName>
            </value>
            <value>
                <fullName>CSMR S&amp;P</fullName>
            </value>
            <value>
                <fullName>SMB Channel</fullName>
            </value>
            <value>
                <fullName>SMB Direct</fullName>
            </value>
            <value>
                <fullName>WWP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>