force-app/main/default/objects/Rebate_Rule_Line_Item__c/fields/Class__c.field-meta.xml
<CustomField>
    <fullName>Class__c</fullName>
    <label>Class</label>
    <type>TextArea</type>
</CustomField>