force-app/main/default/objects/Rebate_Rule_Line_Item__c/fields/Class_Sub_Class__c.field-meta.xml
<CustomField>
    <fullName>Class_Sub_Class__c</fullName>
    <formula>IF(Class__c != null,  IF(Sub_Class__c != null, Class__c  + &apos;/&apos; +  Sub_Class__c , Class__c + &apos;/&apos; +&apos;NA&apos;),  IF(Sub_Class__c != null, &apos;NA&apos;+ &apos;/&apos; + Sub_Class__c, &apos;&apos;) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Class/Sub Class</label>
    <type>Text</type>
</CustomField>