force-app/main/default/objects/Rebate_Rule_Line_Item__c/fields/Dell_SKU__c.field-meta.xml
<CustomField>
    <fullName>Dell_SKU__c</fullName>
    <label>Dell SKU #</label>
    <type>TextArea</type>
</CustomField>