force-app/main/default/objects/Rebate_Rule_Line_Item__c/fields/Flat_Rate__c.field-meta.xml
<CustomField>
    <fullName>Flat_Rate__c</fullName>
    <label>Flat Rate Amount</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>