force-app/main/default/objects/Rebate_Rule_Line_Item__c/fields/Max_Units__c.field-meta.xml
<CustomField>
    <fullName>Max_Units__c</fullName>
    <label>Max. Units</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>