force-app/main/default/objects/Rebate_Rule_Line_Item__c/fields/Rebate_Rule_Header__c.field-meta.xml
<CustomField>
    <fullName>Rebate_Rule_Header__c</fullName>
    <label>Rebate Rule Header</label>
    <referenceTo>Rebate_Rule_Header__c</referenceTo>
    <relationshipLabel>Rebate Rule Line Items</relationshipLabel>
    <relationshipName>Rebate_Rule_Line_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>