force-app/main/default/objects/Rebate_Rule_Line_Item__c/fields/Units_Forecasted__c.field-meta.xml
<CustomField>
    <fullName>Units_Forecasted__c</fullName>
    <label>Units Forecasted</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>