force-app/main/default/objects/Rebate_Rule_Line_Item__c/fields/Vendor__c.field-meta.xml
<CustomField>
    <fullName>Vendor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vendor</label>
    <referenceTo>Vendor__c</referenceTo>
    <relationshipLabel>Rebate Rule Line Items</relationshipLabel>
    <relationshipName>Rebate_Rule_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>