force-app/main/default/objects/Rebate_Rule_Line_Item__c/recordTypes/Class_Sub_Class.recordType-meta.xml
<RecordType>
    <fullName>Class_Sub_Class</fullName>
    <active>true</active>
    <description>Calculation is based on Dell product Class and/or Sub Class categorization</description>
    <label>Class / Sub Class</label>
</RecordType>