force-app/main/default/objects/Rebate_Rule_Line_Item__c/recordTypes/Flat_Rate.recordType-meta.xml
<RecordType>
    <fullName>Flat_Rate</fullName>
    <active>true</active>
    <description>Rebate is a fixed amount</description>
    <label>Flat Rate</label>
</RecordType>