force-app/main/default/objects/Rebate_Rule_Line_Item__c/recordTypes/SKU_Based.recordType-meta.xml
<RecordType>
    <fullName>SKU_Based</fullName>
    <active>true</active>
    <description>Calculation is based on specific Dell SKUs</description>
    <label>SKU Based</label>
</RecordType>