force-app/main/default/objects/Rebate_Rule_Line_Item__c/validationRules/Viper_Rebate_rule_Item_date.validationRule-meta.xml
<ValidationRule>
    <fullName>Viper_Rebate_rule_Item_date</fullName>
    <active>true</active>
    <description>Effective date from / to difference should be at least 24hrs.</description>
    <errorConditionFormula>Effective_Date_To__c  -  Effective_Date_From__c  &lt;= 0</errorConditionFormula>
    <errorDisplayField>Effective_Date_To__c</errorDisplayField>
    <errorMessage>Effective To date should be at least one day after Effective From date</errorMessage>
</ValidationRule>